@@ -16,6 +16,7 @@
 
 - Modules: Added support for non-zero IVs for -m 6800 (Lastpass). Also added `tools/lastpass2hashcat.py`
 - Status Code: Add specific return code for self-test fail (-11)
+- Described workaround in error message when detecting more than 64 backend devices
 
 * changes v6.2.5 -> v6.2.6
 
